--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "npm run build:rollup && npm run create-dts",
     "test": "echo \"Warning: no test specified\" && exit 0"
   },
+  "prepare": "npm run build",
   "homepage": "https://github.com/dutzi/react-route-transition#readme",
   "bugs": {
     "url": "https://github.com/dutzi/react-route-transition/issues"
